--- a/lab3/SeaBattle/app/src/main/AndroidManifest.xml
+++ b/lab3/SeaBattle/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SeaBattle">
-        <activity android:name=".CreateFieldActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".CreateFieldActivity" />
         <activity android:name=".GameActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
