--- a/lab3/SeaBattle/app/src/main/AndroidManifest.xml
+++ b/lab3/SeaBattle/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SeaBattle">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Statistics.StatisticsActivity"></activity>
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".CreateFieldActivity" />
         <activity android:name=".GameActivity" />
         <activity android:name=".LoginActivity">
