--- a/lab3/SeaBattle/app/src/main/AndroidManifest.xml
+++ b/lab3/SeaBattle/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SeaBattle">
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
         <activity android:name=".Statistics.StatisticsActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".MainActivity" />
